--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+³<!DOCTYPE html>
 <html>
 <head>
     <title>Portfolio</title>
@@ -93,8 +93,8 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="image.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Name</h1>
+            <img src="1742882832442.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>Gunasekaran j</h1>
             <p>I am a Student</p>
         </div>
     </header>
@@ -162,14 +162,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Gunasekaran-J-FlowCV-Resume-20250325 (3).pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2025 Name</p>
+        <p>&copy; 2025 Guna</p>
     </footer>
 
     <script>
